update filed of contract parametrs
