# docs/swagger.yaml
@@ -142,12 +142,16 @@ definitions:
         type: string
       created_at:
         type: string
+      end_date:
+        type: string
       extend_date:
         type: string
       id:
         type: integer
       is_extend_contract:
         type: boolean
+      start_date:
+        type: string
       status:
         type: string
       updated_at:
@@ -160,6 +164,11 @@ definitions:
       contract_date:
         type: string
       contract_number:
+        type: string
+      currency_code:
+        type: string
+      currency_name:
+        description: update fields
         type: string
       date_of_delivery:
         type: string
@@ -183,10 +192,6 @@ definitions:
         type: number
       pricetype_code:
         type: string
-      pricetype_currency:
-        type: string
-      pricetype_currency_name:
-        type: string
       pricetype_name:
         type: string
       return_time_delivery:
@@ -206,6 +211,13 @@ definitions:
       start_date:
         type: string
       status:
+        type: string
+    type: object
+  model.ConvertCurrency:
+    properties:
+      currency_code:
+        type: string
+      currency_name:
         type: string
     type: object
   model.Counterparty:
@@ -1542,6 +1554,38 @@ paths:
             additionalProperties: true
             type: object
       summary: get price type by BIN
+      tags:
+      - price_type
+  /currencies:
+    get:
+      consumes:
+      - application/json
+      description: get currencies
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.ConvertCurrency'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: get currencies
       tags:
       - price_type
   /detach_role/{user_id}/{role_id}:
